--- a/Public/CSS/sass/partials/_navbar.scss
+++ b/Public/CSS/sass/partials/_navbar.scss
@@ -2,7 +2,7 @@
 .logo img {
   max-width: 100px;
 }
-.headerHome, .headerTester {
+#headerHome, #headerTester {
 nav.main-nav {
   display: flex;
   align-items: center;
