--- a/Views/homepage.hbs
+++ b/Views/homepage.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/theme.css">
-    <title>Testes - Ally</title>
+    <title>Ally - Testes de Acessibilidade e Usabilidade</title>
 </head>
 
 
@@ -29,7 +29,6 @@
                 <button class="menu-toggle" aria-expanded="false">Menu</button>
 
                 <ul id="menu">
-                    <li><a href="/about">Sobre nós</a></li>
                     <li><a href="/contato">Contato</a></li>
                     <li><a class="highlight" href="/tester">Seja pago para testar</a></li>
                 </ul>
