--- a/Views/landingTester.hbs
+++ b/Views/landingTester.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/theme.css">
-    <title>Testes - Ally</title>
+    <title>Ally - Testes de Acessibilidade e Usabilidade</title>
 </head>
 
 
@@ -30,14 +30,13 @@
                 <button class="menu-toggle" aria-expanded="false">Menu</button>
 
                 <ul id="menu">
-                    <li><a href="/about">Sobre nós</a></li>
                     <li><a href="/contato">Contato</a></li>
                     <li><a class="highlight" href="/">Quer testar seu site?</a></li>
                 </ul>
 
                 <div class="account">
                     <a class="btn-login" href="/users/login">Entrar</a>
-                    <a class="btn-register" href="/users/register">Criar conta</a>
+                    <a class="btn-register" href="/users/register/tester">Criar conta</a>
                 </div>
 
             </div>
