--- a/Public/CSS/sass/partials/_sidebarDashboard.scss
+++ b/Public/CSS/sass/partials/_sidebarDashboard.scss
@@ -1,38 +1,5 @@
 @import "cores";
 
-.btn-cta {
-  display: inline-block;
-  margin-top: 1rem;
-  color: var(--color-white);
-  padding: 0.8em 1.5em;
-  border-radius: 1.6em;
-  font-size: 14px;
-
-  background-color: var(--color-blue);
-  box-shadow: 0 5px 8px rgba(109, 121, 156, 0.2);
-  cursor: pointer;
-
-  transition-duration: 0.5s;
-  transition-property: background-color;
-  transition-timing-function: ease;
-
-  &:hover {
-    background-color: var(--color-hover);
-  }
-}
-
-.btn-orientacoes {
-  display: inline-block;
-  margin-top: 2rem;
-  color: var(--color-blue);
-  border: 2px solid var(--color-blue);
-  font-size: 14px;
-  background: var(--color-white);
-  padding: 1rem 2rem;
-  font-weight: 700;
-  border-radius: 3em;
-}
-
 $height-header: 60px;
 $height-footer: 50px;
 $width-sidenav: 210px;
@@ -48,6 +15,39 @@ $width-sidenav: 210px;
     "main"
     "footer";
   height: 100vh;
+
+  .btn-cta {
+    display: inline-block;
+    margin-top: 1rem;
+    color: var(--color-white);
+    padding: 0.8em 1.5em;
+    border-radius: 1.6em;
+    font-size: 14px;
+
+    background-color: var(--color-blue);
+    box-shadow: 0 5px 8px rgba(109, 121, 156, 0.2);
+    cursor: pointer;
+
+    transition-duration: 0.5s;
+    transition-property: background-color;
+    transition-timing-function: ease;
+
+    &:hover {
+      background-color: var(--color-hover);
+    }
+  }
+
+  .btn-orientacoes {
+    display: inline-block;
+    margin-top: 2rem;
+    color: var(--color-blue);
+    border: 2px solid var(--color-blue);
+    font-size: 14px;
+    background: var(--color-white);
+    padding: 1rem 2rem;
+    font-weight: 700;
+    border-radius: 3em;
+  }
 }
 
 // header dashboard
@@ -115,7 +115,6 @@ $width-sidenav: 210px;
   box-shadow: 0px 4px 10px rgba(121, 121, 121, 0.21);
   z-index: 2;
 
- 
   .close {
     display: flex;
     margin: 10px;
@@ -178,7 +177,6 @@ $width-sidenav: 210px;
         border-right: 5px solid var(--color-pink) !important;
         transition: 0.4s;
       }
-    
 
       .item {
         position: relative;
@@ -188,7 +186,6 @@ $width-sidenav: 210px;
         cursor: pointer;
 
         &:hover {
-          
           background: #f1f1f1;
           border-right: 5px solid var(--color-pink) !important;
         }
@@ -506,10 +503,9 @@ main.comTestes {
     }
 
     &:hover {
-        box-shadow: 0 10px 20px rgba(0, 42, 147, 0.3);
-        transition: box-shadow 0.3s ease;
-        
-      }
+      box-shadow: 0 10px 20px rgba(0, 42, 147, 0.3);
+      transition: box-shadow 0.3s ease;
+    }
   }
 
   .gravacoes {
@@ -519,7 +515,7 @@ main.comTestes {
     padding: 2rem 3rem;
     text-align: center;
     cursor: pointer;
-   color: var(--color-black);
+    color: var(--color-black);
     transition: 0.5s;
 
     h2 {
@@ -527,12 +523,10 @@ main.comTestes {
       margin: 6rem 0 0.8rem;
     }
 
-
     &:hover {
-        box-shadow: 0 10px 15px rgba(0, 42, 147, 0.2);
-        transition: box-shadow 0.3s ease;
-        
-      }
+      box-shadow: 0 10px 15px rgba(0, 42, 147, 0.2);
+      transition: box-shadow 0.3s ease;
+    }
   }
 }
 // configuracoes
@@ -620,8 +614,8 @@ main.comTestes {
   padding: 0 16px;
   background-color: #f0f0f0;
 
-  a  {
-      color: var(--color-black);
+  a {
+    color: var(--color-black);
   }
 }
 
@@ -675,4 +669,55 @@ svg.svg-inline--fa.fa-video.fa-w-18 {
   padding: 10px;
   width: 50px;
   height: auto;
+}
+
+.dashboardTester {
+  padding: 40px;
+  line-height: 1.6;
+
+  .info {
+    background: #fffef7;
+    color: var(--color-black);
+    padding: 3rem 30rem 4rem 5rem;
+
+    h2 {
+      font-weight: 700;
+      font-size: 27px;
+    }
+
+    p {
+      margin-top: 10px;
+      font-size: 20px;
+    }
+  }
+
+  .testes {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(510px, 1fr));
+    grid-gap: 20px;
+
+    margin-top: 3rem;
+
+    h3 {
+      font-size: 26px;
+    }
+
+    p {
+      font-size: 18px;
+    }
+
+    .convites {
+     
+     border: 1px solid var(--color-blue);
+     padding: 5rem 4rem 6rem;
+     text-align: center;
+
+    
+    }
+    .testes-realizados {
+      background: #fbfbfd;
+      padding: 5rem 4rem 6rem;
+      text-align: center;
+    }
+  }
 }
