--- a/Public/CSS/theme.css
+++ b/Public/CSS/theme.css
@@ -559,7 +559,7 @@ img {
 .home #orientacoes {
   padding: 7rem 0;
   text-align: center;
-  background: var(--color-yellow);
+  background: linear-gradient(3deg, rgba(255, 254, 246, 0.8) 0%, rgba(255, 255, 251, 0.8) 60%, white 100%);
 }
 
 .home #orientacoes p {
