--- a/Views/calendario.hbs
+++ b/Views/calendario.hbs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="./CSS/Fullcallendar/main.min.css">
+      <link rel="shortcut icon" type="image/x-icon" href="/Imagens/favicon.ico">
     <link rel="stylesheet" href="/CSS/theme.css">
     <title>Agenda - Ally</title>
 </head>
