--- a/Views/homepage.hbs
+++ b/Views/homepage.hbs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/theme.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/Imagens/favicon.ico">
     <title>Ally - Testes de Acessibilidade e Usabilidade</title>
 </head>
 
