--- a/Public/CSS/sass/partials/_sidebarDashboard.scss
+++ b/Public/CSS/sass/partials/_sidebarDashboard.scss
@@ -17,7 +17,7 @@ $width-sidenav: 210px;
   height: 100vh;
 
   .btn-cta {
-    display: inline-block;
+    display: table;
     margin-top: 1rem;
     color: var(--color-white);
     padding: 0.8em 1.5em;
@@ -707,17 +707,111 @@ svg.svg-inline--fa.fa-video.fa-w-18 {
     }
 
     .convites {
-     
-     border: 1px solid var(--color-blue);
-     padding: 5rem 4rem 6rem;
-     text-align: center;
-
-    
-    }
-    .testes-realizados {
       background: #fbfbfd;
       padding: 5rem 4rem 6rem;
       text-align: center;
+    }
+    .testes-realizados {
+      background: #ff5f7d05;
+      padding: 5rem 4rem 6rem;
+      text-align: center;
+    }
+  }
+}
+
+// pagina rever gravacoes e anotacoes
+.gravacoesAnotacoes {
+  padding: 30px 40px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 245px));
+  grid-gap: 20px;
+
+  .gravacao {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 235px;
+    margin-bottom: 20px;
+    box-shadow: 0px 4px 10px rgba(157, 155, 155, 0.25);
+    position: relative;
+    min-height: 230px;
+    transition: 0.5s;
+
+    &:hover {
+      box-shadow: 0 10px 25px rgba(0, 10, 120, 0.1);
+      transition: box-shadow 0.3s ease;
+    }
+
+    img {
+      width: 100%;
+    }
+
+    .text {
+      text-align: center;
+      padding: 25px;
+    }
+
+    h2 {
+      font-size: 22px;
+      color: var(--color-blue);
+    }
+
+    p {
+      font-size: 14px;
+      margin-top: 5px;
+      font-weight: 300;
+      color: var(--color-black);
+    }
+  }
+}
+
+.videoAnotacoes {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 2rem 0 2rem;
+  align-items: center;
+
+  .video {
+    position: relative;
+    overflow: hidden;
+    width: 90%;
+    margin-bottom: 6rem;
+    padding-top: 42%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+
+    .responsive-iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .anotacoes {
+    width: 80%;
+    h2 {
+      font-size: 3rem;
+    }
+
+    ul {
+      margin-top: 3rem;
+
+      li {
+        background: var(--color-white);
+        box-shadow: 0px 4px 8px rgba(180, 180, 180, 0.25);
+        padding: 1rem 3rem 1.4rem;
+        margin-bottom: 3rem;
+
+        .tempo {
+          color: var(--color-blue);
+          display: block;
+          margin-bottom: 5px;
+          font-size: 15px;
+        }
+      }
     }
   }
 }
