--- a/Public/CSS/sass/partials/_videoGrid.scss
+++ b/Public/CSS/sass/partials/_videoGrid.scss
@@ -12,8 +12,8 @@
 
   .videoContainer {
         background: #FDFEFF;
-        height: 80%;
-        width: 90%;
+        height: 85%;
+        width: 95%;
         display: grid;
         grid-template-columns: 0fr 0.6fr 3fr 0.1fr;
         grid-template-rows: 0.4fr 2.6fr 2rem;
@@ -51,8 +51,8 @@
          
         }
         #remoteContainer{
-          width: 80%;
-          height: 90%;
+          width: 85%;
+          height: 95%;
           grid-row: 1/4;
           margin-top: 1.5%;
           margin-bottom: 2.5%;
@@ -128,8 +128,8 @@
       
   
       #anotacoes{
-        width: 30%;
-        height: 80%;
+        width: 28%;
+        height: 85%;
         background-color: #F2F2F2;
         display: flex;
         flex-direction: column;
@@ -144,10 +144,16 @@
             padding-right: 2rem;
             background-color: #3B1AE3;
             color: #fff;
-            justify-content: space-evenly;
-            h3{
+            justify-content: center;
+
+            img {
+              max-width: 20px;
+              margin-right: 20px;
+            }
+            h2{
               text-align: center;
               margin:0;
+              font-size: 20px;
             }
 
           }
@@ -161,7 +167,7 @@
   
               li{
                 margin-bottom: 1rem;
-                width: 85%;
+                width: 100%;
                 display: flex;
                 flex-direction: column;
                 div:first-child{
