--- a/Views/Layouts/main.hbs
+++ b/Views/Layouts/main.hbs
@@ -10,7 +10,9 @@
 </div>
 <noscript>Seu navegador não dá suporte a javascript</noscript>
 <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<noscript>Seu navegador não dá suporte a javascript</noscript>
 <script>
+    
     new window.VLibras.Widget(' https://vlibras.gov.br/app'); </script>
 
 
