Update convite testers

--- a/Views/Partials/_convites.hbs
+++ b/Views/Partials/_convites.hbs
@@ -48,6 +48,7 @@
             <td>
                 {{teste.userNome}}
             </td>
+            <td><a href="/testes/{{teste.testeId}}/chamada">Chamada</a></td>
         </tr>
         {{/each}}
     </tbody>
