--- a/Views/Testes/convidarTesters.hbs
+++ b/Views/Testes/convidarTesters.hbs
@@ -34,4 +34,4 @@
         </div>
     </div>
 </div>
-<script src="./Javascript/convite.js"></script>
+<script src="/Javascript/convite.js"></script>
