--- a/Public/CSS/sass/partials/_colors.scss
+++ b/Public/CSS/sass/partials/_colors.scss
@@ -5,6 +5,7 @@
     --color-black: #0A0016;
     --color-white: #FFF;
     --color-hover: #2D13B2;
+    --color-red: #B20822;
 
     // --color-pink: #ff578a;
 }
