--- a/Views/Layouts/loginLayout.hbs
+++ b/Views/Layouts/loginLayout.hbs
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/theme.css">
-    <title>Ally</title>
-
-</head>
-
-<body>
 
     {{{body}}}
 
@@ -20,7 +9,9 @@
             <div class="vw-plugin-top-wrapper"></div>
         </div>
     </div>
+    <noscript>Seu navegador não dá suporte a javascript</noscript>
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <noscript>Seu navegador não dá suporte a javascript</noscript>  
     <script>
         new window.VLibras.Widget(' https://vlibras.gov.br/app');
     </script>
