--- a/Views/Partials/_testes.hbs
+++ b/Views/Partials/_testes.hbs
@@ -1,7 +1,5 @@
 <!-- pagina testes c/ teste -->
 
-
-
 {{#if testes}}
 
 
@@ -26,9 +24,7 @@
      <a class="btn-cta" href="/testes/add">Crie um novo teste</a>
 </main>
 
-
-
-
+<!-- / pagina testes c/ teste -->
 
 
 <!-- pagina testes - sem testes -->
