--- a/Views/Testes/add.hbs
+++ b/Views/Testes/add.hbs
@@ -70,7 +70,7 @@
                             <input type="date" id="diaMarcado" name="diaMarcado">
                         </div>
                         <div class="input-field">
-                            <label for="horarioMarcado">Horario</label>
+                            <label for="horarioMarcado">Horário</label>
                             <input type="time" id="horarioMarcado" name="horarioMarcado">
                         </div>
                         <input type="submit" value="Próximo">
