--- a/Views/Testes/edit.hbs
+++ b/Views/Testes/edit.hbs
@@ -34,7 +34,7 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/">Testes </a>
                     </li>
-                     <li class="breadcrumb-item"><a href="/testes/{{teste._id}}">{{teste.nome}}</a</li>
+                     <li class="breadcrumb-item"><a href="/testes/{{teste._id}}">{{teste.nome}}</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Editar Teste</li>
                 </ol>
             </nav>
