--- a/Public/CSS/sass/partials/_addTeste.scss
+++ b/Public/CSS/sass/partials/_addTeste.scss
@@ -111,7 +111,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 17rem;
+    justify-content: flex-end;
     margin-left: auto;
     margin-top: 20px;
     input {
