--- a/Public/CSS/sass/partials/_loginTheme.scss
+++ b/Public/CSS/sass/partials/_loginTheme.scss
@@ -1,4 +1,8 @@
 @import 'cores';
+
+// body {
+// 	background: url(../Imagens/bg-circles.svg) no-repeat center center / cover;
+// }
 #logoLogin {
 	margin-top: 3.019vh;
 	margin-left: 7.5vw;
@@ -10,8 +14,8 @@
 	gap: 0px 0px;
 	grid-template-areas: '. . .';
 	overflow-x: hidden;
-
-	main {
+	
+	.container {
 		overflow-x: hidden;
 		width: 51.8rem;
 		grid-column: 2;
@@ -60,6 +64,7 @@
 					font-weight: 700;
 					border-radius: 5.1rem;
 					border: 0px;
+					cursor: pointer;
 				}
 
 				margin-bottom: 3.2rem;
