--- a/Views/login.hbs
+++ b/Views/login.hbs
@@ -1,39 +1,61 @@
-<header>
-    <a href="/">
-        <img src="\Imagens\Logo.svg" alt="Logo do Ally" id="logoLogin">
-    </a>
-</header>
-<section id="loginSection">
-    <main>
-        <h1>Entrar</h1>
-        <form action="/users/login" method="POST">
-            <div>
-                <label for="email">Email</label>
-                <input id="email" type="email" name='email' placeholder="Insira seu e-mail">
-            </div>
-            <div>
-                <label for="password">Senha</label>
-                <input id="password" type="password" name="password" placeholder="Digite sua senha">
-            </div>
-            <div>
-                <input value="Login" type="submit">
-            </div>
-        </form>
-        <div class="ou">Ou</div>
-        <div class="google-btn" role="button">
-            <a aria-label="Link para entrar usando o google" href="/users/login/google">
-                <div "google-icon-wrapper">
-                    <img class="google-icon"
-                        src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
-                        alt="Icone do Goole">
-                </div>
-                <span class="btn-text">Continuar com Google</span>
-            </a>
-        </div>
-        <div class="npossui">
-            Não possui conta? <a href="/users/register">Entre aqui</a>
-        </div>
-    </main>
-</section>
+<!DOCTYPE html>
+<html lang="pt">
 
-</div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="/Imagens/favicon.ico">
+    <link rel="stylesheet" href="/CSS/theme.css">
+    <title>Login Teste seu Site - Ally</title>
+</head>
+
+
+<body>
+{{!-- skip links --}}
+<ul class="skip-links">
+  
+    <li><a href="#conteudo">Pular para conteúdo</a></li>
+  
+</ul>
+{{!-- / skip links --}}
+    <main id="conteudo">
+        <header>
+            <a href="/">
+                <img src="/Imagens/logo-ally.svg" alt="Logo do Ally" id="logoLogin">
+            </a>
+        </header>
+        <section id="loginSection">
+            <div class="container">
+                <h1>Entrar</h1>
+                <form action="/users/login" method="POST">
+                    <div>
+                        <label for="email">Email</label>
+                        <input id="email" type="email" name='email' placeholder="Insira seu e-mail">
+                    </div>
+                    <div>
+                        <label for="password">Senha</label>
+                        <input id="password" type="password" name="password" placeholder="Digite sua senha">
+                    </div>
+                    <div>
+                        <input value="Login" type="submit">
+                    </div>
+                </form>
+                <div class="ou">Ou</div>
+                <div class="google-btn">
+                    <a aria-label="Link para entrar usando o google" href="/users/login/google">
+                        <div class="google-icon-wrapper">
+                            <img class="google-icon"
+                                src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
+                                alt="Icone do Goole">
+                        </div>
+                        <span class="btn-text">Continuar com Google</span>
+                    </a>
+                </div>
+                <div class="npossui">
+                    Não possui conta? <a href="/users/register">Entre aqui</a>
+                </div>
+            </div>
+        </section>
+
+    </main>
