--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <form>
-                        <input type="text" autocomplete="off" name="anotacao" placeholder="Escreva anotação..">
+                        <input type="text" autocomplete="off" name="anotacao" placeholder="Escreva suas anotações...">
                         <input type="submit" class="btnanotacao" value="Salvar Anotação">
                     </form>
                 </div>
