--- a/Public/CSS/sass/partials/_videoGrid.scss
+++ b/Public/CSS/sass/partials/_videoGrid.scss
@@ -93,7 +93,8 @@
             box-shadow: none;
             border: none;
             border-radius: 15px;
-            font-size: 2rem;
+            font-size: 2.5rem;
+            cursor: pointer;
         
           }
           button:hover {
@@ -102,6 +103,7 @@
           button .selectedBtn{
             background-color: $rosa;
             color: #ffffff;
+
         
           }
       
@@ -109,7 +111,7 @@
         
         .HoverState {
           color: white;
-          font-size: 0.8rem;
+          font-size: 1.4rem;
           position: absolute;
           left: 60px;
           white-space: nowrap;
@@ -142,13 +144,13 @@
             align-items: center;
             padding-left: 2rem;
             padding-right: 2rem;
-            background-color: #3B1AE3;
+            background-color: var(--color-hover);
             color: #fff;
             justify-content: center;
 
             img {
-              max-width: 20px;
-              margin-right: 20px;
+              max-width: 18px;
+              margin-right: 12px;
             }
             h2{
               text-align: center;
