--- a/Public/CSS/sass/partials/_convidarTesters.scss
+++ b/Public/CSS/sass/partials/_convidarTesters.scss
@@ -1,94 +1,91 @@
 @import "cores";
-.convidarTestersContainer{
-    display: flex;
-    height: 80%;   
-    width:90%;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top: 3rem;
-    margin-left: auto;
-    margin-right: auto;
+.convidarTestersContainer {
+	display: flex;
+	height: 80%;
+	width: 90%;
+	flex-direction: column;
+	align-items: flex-start;
+	margin-top: 3rem;
+	margin-left: auto;
+	margin-right: auto;
 
-    h1{
-        font-size: 4.5rem;
-        margin-bottom: 5.2rem;
-    }
-    div#testersTable{
-        width: 118rem;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 6.2rem;
+	h1 {
+		font-size: 4.5rem;
+		margin-bottom: 5.2rem;
+	}
+	div#testersTable {
+		width: 118rem;
+		margin: 0 auto;
+		display: flex;
+		flex-direction: column;
+		margin-bottom: 6.2rem;
 
-        div#testersTableHeader{
-            font-weight: 700;
-            height: 5.3rem;
-            text-align: center;
-            font-size: 2rem;
-            border-radius: 6px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #FBFBFD;
-            color: $azul;
-    
-            div.testersTableTile{
-                width:20%;
-            }
-        }
-        ul{
-            li#tr{
-                border-bottom: solid 1px #BDBDBD;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                height:10rem ;
-    
-                div{
-                    text-align: center;
-                    width:20%;
-                    font-size: 1.8rem;
-    
-                    button{
-                        font-size: 1.6rem;
-                        font-weight: 700;
-                        background-color: #fff;
-                        height: 4.5rem;
-                        width: 13.5rem;
-                        border: 5px solid $azul;
-                        border-radius: 50px;
-                    }
-                }
-                
-            }
+		div#testersTableHeader {
+			font-weight: 700;
+			height: 5.3rem;
+			text-align: center;
+			font-size: 2rem;
+			border-radius: 6px;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			background-color: #fbfbfd;
+			color: $azul;
 
-            margin-bottom: 5rem;
-            
-        }
-    
-        div[role='button']{
-            display: flex;
-            align-self: flex-end;
-            align-items: center;
-            justify-content: center;
-            width: 17.5rem;
-            height: 4.66rem;
-            background-color: $azul;
-            border-radius: 5.1rem;
-            border: 0px;
-            margin-right: 2.5rem;
-            a{
-                font-weight: 700;
-                font-size: 1.8rem;
-                color: white;
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-        
-        }
-        
-    }
+			div.testersTableTile {
+				width: 20%;
+			}
+		}
+		ul {
+			li#tr {
+				border-bottom: solid 1px #bdbdbd;
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				height: 10rem;
+
+				div {
+					text-align: center;
+					width: 20%;
+					font-size: 1.8rem;
+
+					button {
+						font-size: 1.6rem;
+						font-weight: 700;
+						background-color: #fff;
+						height: 4.5rem;
+						width: 13.5rem;
+						border: 5px solid $azul;
+						border-radius: 50px;
+						cursor: pointer;
+					}
+				}
+			}
+
+			margin-bottom: 5rem;
+		}
+
+		div[role='button'] {
+			display: flex;
+			align-self: flex-end;
+			align-items: center;
+			justify-content: center;
+			width: 17.5rem;
+			height: 4.66rem;
+			background-color: $azul;
+			border-radius: 5.1rem;
+			border: 0px;
+			margin-right: 2.5rem;
+			a {
+				font-weight: 700;
+				font-size: 1.8rem;
+				color: white;
+				width: 100%;
+				height: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+		}
+	}
 }
